<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="29dp">

            <Button
                android:id="@+id/buttonBackThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_btn_third"
                android:layout_gravity="start" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="160dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liked_recipe"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioLovedIt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loved_recipe" />

                <RadioButton
                    android:id="@+id/radioOkay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/okay_recipe" />

                <RadioButton
                    android:id="@+id/radioNotForMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_for_me_recipe" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBoxMakeAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_again"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/editTextComment"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="Comment"
                android:hint="@string/leave_comment"
                android:layout_marginTop="16dp"
                android:padding="12dp" />


            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_response"
                android:minWidth="100dp"
                android:layout_marginTop="49dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
